client/views/login-form/_login-form.sass
.login-form-container
  display: flex
  flex-direction: row
  align-items: center
  height: 100%

.landing-page-login-form-block
  flex-direction: column

.login-form-field-container
  display:flex
  flex-direction: column

.login-form-input-field-container
  margin: 3px 5px 3px 0

.login-error-message
  color: red
  font-size: 12px
  margin: 0
  height: 12px

.navbar-login-button-container
  height: 37px
  align-items: flex-start

.navbar-login-button
  font-size: 13px
  padding: 4px 12px

@media screen and (max-width: 480px) 
  .navbar-login-form-block
    display: none
  .login-error-message
    margin-bottom: 8px

@media screen and (min-width: 480px) 
  .landing-page-login-form-block
    display: none

